# Axiom-IC

./: .gitignore  CMakeLists.txt  README.md  test.aic  test.py
docs/: README.md  Testing.md
docs/bytecode/: Verifier.md  operands.md
docs/bytecode/directives/: const.md  export.md  fn.md  import.md  main.md  module.md
docs/bytecode/operands/: ABS.md  ACOS.md  ACOSH.md  ACOT.md  ACOTH.md  ACSC.md  ACSCH.md  ADD.md  AND.md  APPEND_FILE.md  ARG.md  ARG_ARITY.md  ARG_GET.md  ARG_GET_DEFAULT.md  ARG_REQUIRE.md  ASEC.md  ASECH.md  ASIN.md  ASINH.md  ATAN.md  ATAN2.md  ATANH.md  CALL.md  CAST_BOOL.md  CAST_FLOAT.md  CAST_INT.md  CAST_STRING.md  CATCH.md  CBRT.md  CEIL.md  CLAMP.md  CLEAR.md  COPY.md  COS.md  COSH.md  COT.md  COTH.md  CSC.md  CSCH.md  DEC.md  (+244 more)
docs/bytecode/types/: Booleans.md  Exceptions.md  Floats.md  Functions.md  Integers.md  Lists.md  Maps.md  Matrix.md  Modules.md  Namespaces.md  Null.md  Overloads.md  Sets.md  Strings.md  Structures.md  Vector.md
docs/internals/: design-decisions.md  future-ideas.md
docs/versions/: README.md
ext/: README.md
ext/vscode/: README.md
ext/zed/: README.md  extension.toml  snippets.json
ext/zed/snippets/: axiom-ic.json
src/: Main.aic  Main.java  aic  aic.cpp  main.cpp
src/core/: operations.cpp  operations.hpp  optimizer.cpp  optimizer.hpp  program.cpp  program.hpp  types.cpp  types.hpp  verifier.cpp  verifier.hpp
src/parser/: parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
src/util/: symbols.cpp  symbols.hpp
tests/: README.md  run_tests.py
tests/fixtures/runtime/: arithmetic_and_logic.aic  (+34 more)
(+8 files in other folders)
